# phase2-track3-day8-langgraph-agent

./: .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: lab.yaml  lab_hidden.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: batch-workspace.tsx  theme-toggle.tsx  ticket-workspace.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: use-theme.ts
outputs/: cli_report_stub.md  cli_report_stub_hidden.md  metrics.json
reports/: lab_report.md  lab_report_filled.md
src/langgraph_agent_lab/: api_server.py  cli.py  graph.py  metrics.py  nodes.py  persistence.py  state.py
src/langgraph_agent_lab/api/: __init__.py  app.py
tests/: test_api.py
